==> dna001/elua/src/platform/stm32f7/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "uip_arp.h"
#include "elua_uip.h"
#include "elua_adc.h"
#include "uip-conf.h"
#include "platform_conf.h"
#include "diskio.h"
#include "common.h"
#include "buf.h"
#include "utils.h"
#include "lua.h"
#include "lauxlib.h"
#include "lrotable.h"
#include "pll_config.h"
#include "stm32f7xx.h"
#include "stm32f7xx_hal.h"
#define HCLK        ( (HSI_VALUE / PLL_M) * PLL_N / PLL_P)
#define HCLK        ( (HSE_VALUE / PLL_M) * PLL_N / PLL_P)
#define PCLK1_DIV   2
#define PCLK2_DIV   1
#define SYSTICKHZ               20
#define SYSTICKMS               (1000 / SYSTICKHZ)
#define WATCH_COUNTER_RESET     127

int platform_init()
{
  // Enable the CPU Cache
  CPU_CACHE_Enable();

  HAL_Init();

  setsysclock();

  // Setup IRQ's
  NVIC_Configuration();

  // Setup PIO
  pios_init();

  // Setup UARTs
  uarts_init();

  // Setup timers
  timers_init();

  // Setup system timer
  cmn_systimer_set_base_freq( HCLK );
  cmn_systimer_set_interrupt_freq( SYSTICKHZ );

  // Enable SysTick
  //if ( SysTick_Config( HCLK / SYSTICKHZ ) )
  //{
    /* Capture error */
  //  while (1);
  //}

#if defined( WATCHDOG_ENABLE )
  // Enable Watchdog
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_WWDG, ENABLE);
  WWDG_SetPrescaler(WWDG_Prescaler_8);
  WWDG_SetWindowValue( WATCH_COUNTER_RESET );
  WWDG_Enable( WATCH_COUNTER_RESET );
#endif

#ifdef BUILD_WOFS
  // Flash initialization (for WOFS)
  FLASH_ClearFlag(FLASH_FLAG_EOP | FLASH_FLAG_OPERR | FLASH_FLAG_WRPERR |
                  FLASH_FLAG_PGAERR | FLASH_FLAG_PGPERR|FLASH_FLAG_PGSERR);

  FLASH_Unlock();
#endif

  cmn_platform_init();

  // All done
  return PLATFORM_OK;
}

static void pios_init()
{
  //GPIO_InitTypeDef GPIO_InitStructure;
  int port;

  // Enable all GPIO port clocks
  __HAL_RCC_GPIOA_CLK_ENABLE();
  __HAL_RCC_GPIOB_CLK_ENABLE();
  __HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();
  __HAL_RCC_GPIOG_CLK_ENABLE();
  __HAL_RCC_GPIOH_CLK_ENABLE();
  __HAL_RCC_GPIOI_CLK_ENABLE();
  __HAL_RCC_GPIOJ_CLK_ENABLE();
  __HAL_RCC_GPIOK_CLK_ENABLE();

  for( port = 0; port < NUM_PIO; port++ )
  {
    // Default all port pins to input and enable port.
    //GPIO_StructInit(&GPIO_InitStructure);
    //GPIO_Init(pio_port[port], &GPIO_InitStructure);
  }

#if 0
#if defined(ENABLE_JTAG_SWD) || defined(ENABLE_TRACE)
  //Mapping JTAG / SWD pins
  GPIO_PinAFConfig(GPIOB, GPIO_PinSource4,  GPIO_AF_SWJ); // PB4  TRST
  GPIO_PinAFConfig(GPIOB, GPIO_PinSource3,  GPIO_AF_SWJ); // PB3  TDO   / SWO

  GPIO_PinAFConfig(GPIOA, GPIO_PinSource13, GPIO_AF_SWJ); // PA13 TMS   / SWDIO
  GPIO_PinAFConfig(GPIOA, GPIO_PinSource14, GPIO_AF_SWJ); // PA14 TCK   / SWDCLK
  GPIO_PinAFConfig(GPIOA, GPIO_PinSource15, GPIO_AF_SWJ); // PA15 TDI

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_13 | GPIO_Pin_15;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3 | GPIO_Pin_4;
  GPIO_Init(GPIOB, &GPIO_InitStructure);

  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_14;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

#endif

#ifdef ENABLE_TRACE
  //Mapping TRACE pins, PE2,3,4,5,6
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2 | GPIO_Pin_3 | GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_6;
  GPIO_Init(GPIOE, &GPIO_InitStructure);

  GPIO_PinAFConfig(GPIOE, GPIO_PinSource2, GPIO_AF_TRACE);
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource3, GPIO_AF_TRACE);
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource4, GPIO_AF_TRACE);
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource5, GPIO_AF_TRACE);
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource6, GPIO_AF_TRACE);
#endif
#endif
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1;
  GPIO_InitTypeDef GPIO_InitStructure = { 0 };
  GPIO_TypeDef * base = pio_port[ port ];

  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:
      base->ODR = pinmask;
      break;

    case PLATFORM_IO_PIN_SET:
      HAL_GPIO_WritePin(base, pinmask, GPIO_PIN_SET);
      break;

    case PLATFORM_IO_PIN_CLEAR:
      HAL_GPIO_WritePin(base, pinmask, GPIO_PIN_RESET);
      break;

    case PLATFORM_IO_PORT_DIR_INPUT:
      pinmask = GPIO_PIN_All;
    case PLATFORM_IO_PIN_DIR_INPUT:
      GPIO_InitStructure.Pin  = pinmask;
      GPIO_InitStructure.Mode = GPIO_MODE_INPUT;

      HAL_GPIO_Init(base, &GPIO_InitStructure);
      break;

    case PLATFORM_IO_PORT_DIR_OUTPUT:
      pinmask = GPIO_PIN_All;
    case PLATFORM_IO_PIN_DIR_OUTPUT:
      GPIO_InitStructure.Pin   = pinmask;
      GPIO_InitStructure.Mode  = GPIO_MODE_OUTPUT_PP;
      GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;

      HAL_GPIO_Init(base, &GPIO_InitStructure);
      break;

    case PLATFORM_IO_PORT_GET_VALUE:
      retval = pinmask == PLATFORM_IO_READ_IN_MASK ? base->IDR : base->ODR;
      break;

    case PLATFORM_IO_PIN_GET:
      retval = HAL_GPIO_ReadPin(base, pinmask);
      break;

    case PLATFORM_IO_PIN_PULLUP:
      GPIO_InitStructure.Pin   = pinmask;
      GPIO_InitStructure.Pull = GPIO_PULLUP;

      HAL_GPIO_Init(base, &GPIO_InitStructure);
      break;

    case PLATFORM_IO_PIN_PULLDOWN:
      GPIO_InitStructure.Pin   = pinmask;
      GPIO_InitStructure.Pull  = GPIO_PULLDOWN;

      HAL_GPIO_Init(base, &GPIO_InitStructure);
      break;

    case PLATFORM_IO_PIN_NOPULL:
      GPIO_InitStructure.Pin   = pinmask;
      GPIO_InitStructure.Pull  = GPIO_NOPULL;

      HAL_GPIO_Init(base, &GPIO_InitStructure);
      break;

    default:
      retval = 0;
      break;
  }
  return retval;
}

static void uarts_init()
{
  // Enable clocks.
  __HAL_RCC_USART1_CLK_ENABLE();
  __HAL_RCC_USART2_CLK_ENABLE();
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  UART_InitTypeDef UART_InitStructure;

  if( id == CDC_UART_ID ) // no dynamic configuration yet
    return 0;

  UART_InitStructure.BaudRate = baud;
  UART_InitStructure.HwFlowCtl = UART_HWCONTROL_NONE;
  UART_InitStructure.Mode = UART_MODE_TX_RX;

  switch( databits )
  {
    case 5:
    case 6:
    case 7:
    case 8:
      UART_InitStructure.WordLength = UART_WORDLENGTH_8B;
      break;
    case 9:
      UART_InitStructure.WordLength = UART_WORDLENGTH_9B;
      break;
    default:
      UART_InitStructure.WordLength = UART_WORDLENGTH_8B;
      break;
  }

  switch (stopbits)
  {
    case PLATFORM_UART_STOPBITS_1:
      UART_InitStructure.StopBits = UART_STOPBITS_1;
      break;
    case PLATFORM_UART_STOPBITS_2:
      UART_InitStructure.StopBits = UART_STOPBITS_2;
      break;
    default:
      UART_InitStructure.StopBits = UART_STOPBITS_1;
      break;
  }

  switch (parity)
  {
    case PLATFORM_UART_PARITY_EVEN:
      UART_InitStructure.Parity = USART_PARITY_EVEN;
      break;
    case PLATFORM_UART_PARITY_ODD:
      UART_InitStructure.Parity = USART_PARITY_ODD;
      break;
    default:
      UART_InitStructure.Parity = USART_PARITY_NONE;
      break;
  }

  uart_init(id, &UART_InitStructure);

  return baud;
}

void platform_s_uart_send( unsigned id, u8 data )
{
#ifdef BUILD_USB_CDC
  if( id == CDC_UART_ID )
    VCP_DataTx( &data, 1 );
  else
#endif
  {
    HAL_UART_Transmit( &stm32_uart_hnd[ id ], &data, 1, 100 );
  }
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  HAL_StatusTypeDef status;
  u8 data;
  if( id == CDC_UART_ID ) // this shouldn't happen
    return -1;
  status = HAL_UART_Receive( &stm32_uart_hnd[ id ], &data, 1, timeout );
  if (status != HAL_OK)
    return -1;
  return data;
}

int platform_s_uart_set_flow_control( unsigned id, int type )
{
  USART_TypeDef *usart = stm32_usart[ id ];
  int temp = 0;
  GPIO_InitTypeDef GPIO_InitStructure;

  if( id >= 3 ) // on STM32 only USART1 through USART3 have hardware flow control ([TODO] but only on high density devices?)
    return PLATFORM_ERR;

  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStructure.Mode = GPIO_MODE_INPUT;

  if( type == PLATFORM_UART_FLOW_NONE )
  {
    usart->CR3 &= ~UART_HWCONTROL_RTS_CTS;
    GPIO_InitStructure.Pin = usart_gpio_rts_pin[ id ] | usart_gpio_cts_pin[ id ];
    HAL_GPIO_Init( usart_gpio_hwflow_port[ id ], &GPIO_InitStructure );
    return PLATFORM_OK;
  }
  if( type & PLATFORM_UART_FLOW_CTS )
  {
    temp |= UART_HWCONTROL_CTS;
    GPIO_InitStructure.Pin = usart_gpio_cts_pin[ id ];
    HAL_GPIO_Init( usart_gpio_hwflow_port[ id ], &GPIO_InitStructure );
  }
  if( type & PLATFORM_UART_FLOW_RTS )
  {
    temp |= UART_HWCONTROL_RTS;
    GPIO_InitStructure.Pin = usart_gpio_rts_pin[ id ];
    GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
    HAL_GPIO_Init( usart_gpio_hwflow_port[ id ], &GPIO_InitStructure );
  }
  usart->CR3 |= temp;
  return PLATFORM_OK;
}

static void timers_init()
{
  unsigned i;

  __HAL_RCC_TIM1_CLK_ENABLE();
  __HAL_RCC_TIM2_CLK_ENABLE();

  // Configure timers
  for( i = 0; i < NUM_TIMER; i ++ )
    timer_hnd[i].Instance = (TIM_TypeDef*)timer[ i ];
    platform_timer_set_clock( i, TIM_STARTUP_CLOCK );
}

static u32 platform_timer_set_clock( unsigned id, u32 clock )
{
  TIM_Base_InitTypeDef timer_base_struct;
  u32 pre = ( TIM_GET_BASE_CLK( id ) / clock ) - 1;

  if( pre > 65535 ) // Limit prescaler to 16-bits
    pre = 65535;

  timer_base_struct.Period = ( timer_width[id] == 32 ? 0xFFFFFFFF : 0xFFFF );
  timer_base_struct.Prescaler = ( u16 )pre;
  timer_base_struct.ClockDivision = TIM_CLOCKDIVISION_DIV1;
  timer_base_struct.CounterMode = TIM_COUNTERMODE_UP;
  timer_base_struct.RepetitionCounter = 0x0000;
  timer_hnd[ id ].Init = timer_base_struct;
  HAL_TIM_Base_Init( &timer_hnd[ id ] );
  HAL_TIM_Base_Start( &timer_hnd[ id ] );

  return  platform_timer_get_clock( id );
}

int platform_s_timer_set_match_int( unsigned id, timer_data_type period_us, int type )
{
  TIM_TypeDef* base = ( TIM_TypeDef* )timer[ id ];
  u64 period;
  u32 prescaler, freq;
  timer_data_type final;
  TIM_OC_InitTypeDef  TIM_OCInitStructure = { 0 };

  if( period_us == 0 )
  {
    __HAL_TIM_DISABLE_IT( &timer_hnd[ id ], TIM_IT_CC1 );
    return PLATFORM_TIMER_INT_OK;
  }

  period = ( ( u64 )TIM_GET_BASE_CLK( id ) * period_us ) / 1000000;

  prescaler = (u32)( period / ((u64)1 << timer_width[id]) ) + 1;

  if( prescaler > 0xFFFF )
    return PLATFORM_TIMER_INT_TOO_LONG;

  platform_timer_set_clock( id, TIM_GET_BASE_CLK( id  ) / prescaler );
  freq = platform_timer_get_clock( id );
  final = ( ( u64 )period_us * freq ) / 1000000;

  if( final == 0 )
    return PLATFORM_TIMER_INT_TOO_SHORT;

  __HAL_TIM_DISABLE( &timer_hnd[ id ] );

  TIM_OCInitStructure.OCMode = TIM_OCMODE_TIMING;
  //TIM_OCInitStructure.OutputState = TIM_OutputState_Enable;
  TIM_OCInitStructure.Pulse = final;
  TIM_OCInitStructure.OCPolarity = TIM_OCPOLARITY_HIGH;
  HAL_TIM_OC_ConfigChannel( &timer_hnd[ id ] , &TIM_OCInitStructure, TIM_CHANNEL_1 );

  // Patch timer configuration to reload when period is reached
  __HAL_TIM_SET_AUTORELOAD( &timer_hnd[ id ], final );

  /* Set the Preload enable bit for channel1 */
  base->CCMR1 |= TIM_CCMR1_OC1PE;

  stm32_timer_int_periodic_flag[ id ] = type;

  __HAL_TIM_SET_COUNTER( &timer_hnd[ id ], 0 );
  __HAL_TIM_ENABLE( &timer_hnd[ id ] );
  //TIM_ITConfig( base, TIM_IT_CC1, ENABLE );

  return PLATFORM_TIMER_INT_OK;
}

int platform_flash_erase_sector( u32 sector_id )
{
  return FLASH_EraseSector( flash_sectors[ sector_id ], VoltageRange_3 ) == FLASH_COMPLETE ? PLATFORM_OK : PLATFORM_ERR;
}
